--- a/M1U3/ejemplo01.html
+++ b/M1U3/ejemplo01.html
@@ -7,6 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>JOSEFINA RIVAS</h1>
+    <img src="imagen.jpeg" alt="foto">
+    <h3>Edad: 27 años</h3>
+    <h3>Domicilio: República de Italia 217, Neuquén</h3>
+    <h4>¿Qué series me gustan?</h4>
+    <ul>
+        <li>Grey's Anatomy</li>
+        <li>The Sinner</li>
+        <li>How to Get Away with Murder</li>
+    </ul>
+    <h4>¿Qué pelis son las que más me gustaron?</h4>
+    <ul>
+        <li>Intouchables</li>
+        <li>El Origen</li>
+        <li>The Theory of Everything</li>
+    </ul>
+    <h4>Perfil</h4>
+    <p>Suelo escuchar mucho música. Lo hago mientras voy de un lado a otro, o en mis tiempos libre como música de fondo en el ambiente.</p>
+    <p>Disfruto el tiempo con familia y amigos, cualquier ocación es buena para reunirse</p>
+    <p>Me gusta mantenerme activa, ya sea ejercitandome, haciendo tareas del hogar, investigando temas que me interesen o incluso probando nuevos hobbies</p>
+    <h4>Si querés contactarme podes completar el siguiente <a href="formulario.html" target="_blank">formulario</a></h4>
+
 </body>
-</html> 
+</html>
